...
        }
        // detects color scheme change and re-render
        .onReceive(CurrentValueSubject<ColorScheme, Never>(colorScheme), perform: { newValue in
            self.currentColorScheme = newValue
        })
        .padding(.horizontal, 24)
        .navigationBarTitle("Sign Up")
        .toolbar{
            Button(action: {userData.signInStatus = .signedOut} , label: {
                Text("Log In")
            })
            .accessibility(localIdentifier: .toggleToSignUpButton)
        }
    }
}

...
