...
    @EnvironmentObject var userData: UserData
    @State private var selection: Tab = .me
    @State private var workoutNotification: Bool = false
    
    enum Tab: String {
        case workout = "Exercise"
        case browse = "Video & Live"
        case me = "Me"
        case search = "Search"
    }
    
    var body: some View {
        
        
...
